--- a/package.json
+++ b/package.json
@@ -1,48 +1,58 @@
 {
-  "name": "first",
+  "name": "feathers-again",
   "description": "",
   "version": "0.0.0",
   "homepage": "",
-  "main": "src/",
+  "main": "src",
   "keywords": [
     "feathers"
   ],
-  "license": "MIT",
-  "repository": {},
-  "author": {},
+  "author": {
+    "name": "Bibek Subedi",
+    "email": "bsubedi26@gmail.com"
+  },
   "contributors": [],
   "bugs": {},
+  "directories": {
+    "lib": "src"
+  },
   "engines": {
-    "node": ">= 0.12.0"
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
   },
   "scripts": {
-    "test": "npm run jshint && npm run mocha",
-    "jshint": "jshint src/. test/. --config",
+    "test": "npm run eslint && npm run mocha",
+    "eslint": "eslint src/. test/. --config .eslintrc.json",
     "start": "nodemon src/",
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
     "compression": "^1.6.2",
-    "cors": "^2.8.1",
-    "feathers": "^2.0.2",
-    "feathers-authentication": "^0.7.12",
-    "feathers-configuration": "^0.3.3",
-    "feathers-errors": "^2.5.0",
-    "feathers-hooks": "^1.6.1",
-    "feathers-mongoose": "^3.6.1",
-    "feathers-primus": "^1.4.1",
-    "feathers-rest": "^1.5.2",
-    "feathers-socketio": "^1.4.2",
-    "mongoose": "^4.6.8",
-    "passport": "^0.3.2",
-    "serve-favicon": "^2.3.2",
-    "winston": "^2.3.0",
-    "ws": "^1.1.1"
+    "cors": "^2.8.3",
+    "faker": "^4.1.0",
+    "feathers": "^2.1.3",
+    "feathers-authentication": "^1.2.4",
+    "feathers-authentication-hooks": "^0.1.4",
+    "feathers-authentication-jwt": "^0.3.1",
+    "feathers-authentication-local": "^0.3.4",
+    "feathers-configuration": "^0.4.1",
+    "feathers-errors": "^2.8.1",
+    "feathers-hooks": "^2.0.1",
+    "feathers-hooks-common": "^3.5.1",
+    "feathers-mongoose": "^5.1.0",
+    "feathers-rest": "^1.7.3",
+    "feathers-socketio": "^2.0.0",
+    "helmet": "^3.6.1",
+    "mongoose": "^4.10.5",
+    "serve-favicon": "^2.4.3",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
-    "jshint": "^2.9.4",
-    "mocha": "^3.1.2",
-    "request": "^2.79.0"
+    "eslint": "^3.19.0",
+    "mocha": "^3.4.2",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
