--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "feathers-chat",
-  "description": "A Feathers real-time chat application",
+  "name": "feathers-sql",
+  "description": "",
   "version": "0.0.0",
   "homepage": "",
   "main": "src",
@@ -8,8 +8,8 @@
     "feathers"
   ],
   "author": {
-    "name": "David Luecke",
-    "email": "daff@neyeon.com"
+    "name": "Bibek Subedi",
+    "email": "bsubedi26@gmail.com"
   },
   "contributors": [],
   "bugs": {},
@@ -18,42 +18,42 @@
   },
   "engines": {
     "node": ">= 6.0.0",
-    "yarn": ">= 0.18.0"
+    "npm": ">= 3.0.0"
   },
   "scripts": {
     "test": "npm run eslint && npm run mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
+    "start": "nodemon src/",
     "dev": "nodemon src/",
-    "start": "node src/",
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
     "compression": "^1.6.2",
-    "cors": "^2.8.1",
-    "eslint": "^4.0.0",
-    "feathers": "^2.1.1",
-    "feathers-authentication": "^1.2.6",
+    "cors": "^2.8.3",
+    "faker": "^4.1.0",
+    "feathers": "^2.1.3",
+    "feathers-authentication": "^1.2.4",
+    "feathers-authentication-hooks": "^0.1.4",
     "feathers-authentication-jwt": "^0.3.1",
-    "feathers-authentication-local": "^0.4.3",
+    "feathers-authentication-local": "^0.3.4",
     "feathers-configuration": "^0.4.1",
-    "feathers-errors": "^2.6.1",
-    "feathers-hooks": "^2.0.0",
-    "feathers-hooks-common": "^3.0.0-pre.1",
-    "feathers-knex": "^2.8.1",
-    "feathers-nedb": "^2.6.1",
-    "feathers-profiler": "^0.1.5",
-    "feathers-rest": "^1.7.1",
+    "feathers-errors": "^2.8.1",
+    "feathers-hooks": "^2.0.1",
+    "feathers-hooks-common": "^3.5.1",
+    "feathers-mongoose": "^5.1.0",
+    "feathers-rest": "^1.7.3",
     "feathers-socketio": "^2.0.0",
-    "helmet": "^3.5.0",
-    "knex": "^0.13.0",
-    "mocha": "^3.2.0",
-    "mysql": "^2.15.0",
-    "nedb": "^1.8.0",
-    "request": "^2.81.0",
-    "request-promise": "^4.1.1",
-    "serve-favicon": "^2.4.1",
-    "sqlite3": "^3.1.13",
+    "helmet": "^3.6.1",
+    "mongoose": "^4.10.5",
+    "serve-favicon": "^2.4.3",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "mocha": "^3.4.2",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
