--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "compression": "^1.6.2",
-    "cors": "^2.8.3",
-    "faker": "^4.1.0",
+    "cors": "^2.8.4",
     "feathers": "^2.1.3",
     "feathers-authentication": "^1.2.4",
     "feathers-authentication-hooks": "^0.1.4",
@@ -42,12 +40,15 @@
     "feathers-errors": "^2.8.1",
     "feathers-hooks": "^2.0.1",
     "feathers-hooks-common": "^3.5.1",
-    "feathers-mongoose": "^5.1.0",
+    "feathers-knex": "^2.8.1",
+    "feathers-profiler": "^0.1.5",
     "feathers-rest": "^1.7.3",
     "feathers-socketio": "^2.0.0",
     "helmet": "^3.6.1",
-    "mongoose": "^4.10.5",
+    "knex": "^0.13.0",
+    "mysql": "^2.15.0",
     "serve-favicon": "^2.4.3",
+    "sqlite3": "^3.1.13",
     "winston": "^2.3.1"
   },
   "devDependencies": {
