--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "helmet": "^3.9.0",
     "knex": "^0.13.0",
     "mysql2": "^1.4.2",
+    "pg": "^7.3.0",
     "serve-favicon": "^2.4.5",
+    "sqlite3": "^3.1.13",
     "winston": "^2.4.0"
   },
   "devDependencies": {
