--- a/package.json
+++ b/package.json
@@ -39,12 +39,17 @@
     "@feathersjs/socketio": "^3.0.0",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "feathers-authentication-management": "^1.0.0",
     "feathers-hooks-common": "^3.10.0",
     "feathers-knex": "^2.9.0",
+    "feathers-mailer": "^2.0.0",
     "helmet": "^3.9.0",
     "knex": "^0.13.0",
+    "knex-generic-errors": "^0.1.5",
     "mysql2": "^1.5.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "pg": "^7.3.0",
+    "pug": "^2.0.0-rc.4",
     "serve-favicon": "^2.4.5",
     "sqlite3": "^3.1.13",
     "tcomb-validation": "^3.4.1",
