--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "feathers-3-sql",
   "description": "",
   "version": "0.0.0",
-  "homepage": "",
   "main": "src",
   "keywords": [
     "feathers"
@@ -26,6 +25,7 @@
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "start": "node src/",
     "dev": "nodemon src/",
+    "debug": "set DEBUG=* & npm run start",
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
@@ -37,12 +37,14 @@
     "@feathersjs/express": "^1.0.0",
     "@feathersjs/feathers": "^3.0.0",
     "@feathersjs/socketio": "^3.0.0",
+    "autobahn": "^17.5.2",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "feathers-authentication-management": "^1.0.0",
     "feathers-hooks-common": "^3.10.0",
     "feathers-knex": "^2.9.0",
     "feathers-mailer": "^2.0.0",
+    "feathers-profiler": "^0.1.5",
     "helmet": "^3.9.0",
     "knex": "^0.13.0",
     "mysql2": "^1.5.0",
