--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "start": "node src/",
     "dev": "nodemon src/",
-    "debug": "set DEBUG=* & npm run start",
+    "debug": "set DEBUG=@feathersjs/authentication-oauth2:verify & npm run start",
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
     "@feathersjs/authentication": "^1.4.1",
     "@feathersjs/authentication-jwt": "^1.0.0",
     "@feathersjs/authentication-local": "^1.0.0",
+    "@feathersjs/authentication-oauth2": "^1.0.2",
     "@feathersjs/configuration": "^1.0.0",
     "@feathersjs/errors": "^3.0.0",
     "@feathersjs/express": "^1.0.0",
@@ -41,7 +42,7 @@
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "feathers-authentication-management": "^1.0.0",
-    "feathers-hooks-common": "^3.10.0",
+    "feathers-hooks-common": "git://github.com/feathers-plus/feathers-hooks-common.git#master",
     "feathers-knex": "^2.9.0",
     "feathers-mailer": "^2.0.0",
     "feathers-profiler": "^0.1.5",
@@ -49,6 +50,9 @@
     "knex": "^0.13.0",
     "mysql2": "^1.5.0",
     "nodemailer-smtp-transport": "^2.7.4",
+    "passport-facebook": "^2.1.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^1.0.0",
     "pg": "^7.3.0",
     "pug": "^2.0.0-rc.4",
     "serve-favicon": "^2.4.5",
