mongo/mongoose updates

--- a/package.json
+++ b/package.json
@@ -45,18 +45,16 @@
     "feathers-hooks-common": "git://github.com/feathers-plus/feathers-hooks-common.git#master",
     "feathers-knex": "^2.9.0",
     "feathers-mailer": "^2.0.0",
+    "feathers-mongoose": "^6.0.0",
     "feathers-profiler": "^0.1.5",
     "helmet": "^3.9.0",
-    "knex": "^0.13.0",
-    "mysql2": "^1.5.0",
+    "mongoose": "^4.13.7",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^1.0.0",
-    "pg": "^7.3.0",
     "pug": "^2.0.0-rc.4",
     "serve-favicon": "^2.4.5",
-    "sqlite3": "^3.1.13",
     "tcomb-validation": "^3.4.1",
     "winston": "^2.4.0"
   },
